[package]
name = "advent_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]

members = [
    "day_01",
    "day_01b",
    "day_02",
    "day_02b",
    "day_03",
    "day_03b",
    "day_04",
    "day_04b",
    "day_05",
    "day_05b",
    "day_06",
    "day_06b",
    "day_07",
    "day_07b",
    "day_08",
    "day_08b",
]